# ollystack

./: .env.example  .gitignore  ARCHITECTURE-ENTERPRISE.md  ARCHITECTURE-PRODUCTION.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README-ENTERPRISE.md  README.md  SECURITY.md
.github/: CICD-SETUP.md
.github/workflows/: build-push.yml  ci.yml  deploy-app.yml  deploy-infra.yml  release.yml
agents/ebpf-agent/: Cargo.toml
agents/ebpf-agent/src/: config.rs  main.rs
agents/ebpf-agent/src/exporters/: mod.rs
agents/ebpf-agent/src/probes/: mod.rs  network.rs  runtime.rs  syscalls.rs
agents/rum-sdk/: package.json  rollup.config.js  tsconfig.json
agents/unified-agent/: ARCHITECTURE.md  Dockerfile  README.md  go.mod
agents/universal-agent/: Dockerfile  go.mod
ai-engine/: Dockerfile  pyproject.toml
ai-engine/src/ollystack_ai/: __init__.py  main.py
ai-engine/src/ollystack_ai/anomaly/: __init__.py  detector.py  seasonal.py
ai-engine/src/ollystack_ai/api/: __init__.py  anomaly.py  health.py  investigations.py  llm.py  log_anomaly.py  nlq.py  rca.py
ai-engine/src/ollystack_ai/embeddings/: __init__.py  clustering.py  log_embeddings.py  semantic_search.py
ai-engine/src/ollystack_ai/investigations/: __init__.py  engine.py  models.py  triggers.py
ai-engine/src/ollystack_ai/llm/: __init__.py  analyzer.py  client.py  prompts.py
ai-engine/src/ollystack_ai/llm_observability/: __init__.py  evaluators.py  integrations.py  models.py  observer.py  tracker.py
ai-engine/src/ollystack_ai/log_anomaly/: __init__.py  detector.py  frequency.py  pattern_extractor.py  sequence.py
ai-engine/src/ollystack_ai/ml/: __init__.py  forecaster.py  isolation_forest.py
ai-engine/src/ollystack_ai/nlq/: __init__.py  context.py  executor.py  prompts.py  translator.py
ai-engine/src/ollystack_ai/rca/: __init__.py  analyzer.py  models.py
ai-engine/src/ollystack_ai/services/: __init__.py  cache.py  llm.py  storage.py
ai-engine/tests/: test_llm.py  test_log_anomaly.py  test_seasonal_anomaly.py
api-server/: Dockerfile  go.mod  go.sum
api-server/configs/: config.yaml
collector/: go.mod
control-plane/: README.md  docker-compose.yaml
control-plane/config/: otel-collector-opamp.yaml
control-plane/configs/: advanced-processors-demo.yaml  basic-otlp.yaml  gateway-collector.yaml
control-plane/opamp-server/: Dockerfile  main.py  requirements.txt  seed_configs.py
deploy/: MVP-DEPLOYMENT.md
deploy/aws/: ARCHITECTURE.md  deploy.sh
deploy/docker/: .env.example  README.md  docker-compose.dev.yml  docker-compose.enterprise-simple.yml  docker-compose.minimal.yml  docker-compose.mvp.yml  docker-compose.production.yml  docker-compose.simple.yml  docker-compose.yml
deploy/otel-collector/: config-with-logs.yaml  docker-compose.logs.yaml  host-collector-config.yaml
deploy/scripts/: init-clickhouse.sql  setup-mvp.sh
docs/: AI_ML_ARCHITECTURE.md  ARCHITECTURE.md  DEPLOYMENT.md  ENHANCEMENTS.md  IMPLEMENTATION_TASKS.md  OLLYSTACK_MASTER_PLAN.md  QUICKSTART.md  ROADMAP.md  SPRINT_PROGRESS.md  zero-code-instrumentation-architecture.md
ingestion-gateway/: Dockerfile  go.mod
ingestion-gateway/config/: config.yaml
otel-collector-custom/: Dockerfile  Makefile  builder-config.yaml  config.yaml
otel-processor-correlation/: README.md  config.go  factory.go  go.mod  processor.go  processor_test.go
otel-processor-correlation/testdata/: config.yaml
realtime-processor/: Dockerfile  go.mod
realtime-processor/config/: config.yaml
sample-services/: deploy.sh  docker-compose.yaml  docker-compose.yml
schema/: 003_log_correlation_indexes.sql  004_service_metrics_timeseries.sql  clickhouse_schema.sql
scripts/: bootstrap-aws.sh  build-remote.sh  deploy-all.sh  deploy.sh  setup-github.sh  test-local.sh
storage-consumer/: Dockerfile  go.mod
storage-consumer/config/: config.yaml
stream-processor/: Cargo.toml
stream-processor/src/: config.rs  engine.rs  main.rs
stream-processor/src/analytics/: mod.rs
stream-processor/src/operators/: mod.rs
stream-processor/src/sinks/: mod.rs
web-ui/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json
web-ui/public/: config.js
web-ui/src/: App.tsx  main.tsx
(+197 files in other folders)
