[package]
name = "ollystack-ebpf-agent"
version = "0.1.0"
edition = "2021"
authors = ["OllyStack Team"]
description = "Zero-code kernel-level instrumentation agent using eBPF"
license = "Apache-2.0"
repository = "https://github.com/ollystack/ollystack"

[dependencies]
# eBPF
aya = "0.12"
aya-log = "0.2"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Telemetry
opentelemetry = "0.21"
opentelemetry-otlp = { version = "0.14", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
tonic = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
bytes = "1.5"
libc = "0.2"

[build-dependencies]
aya-build = "0.1"

[[bin]]
name = "ebpf-agent"
path = "src/main.rs"
